--- a/ecommerce-react-project/src/components/sign-in/sign-in.styles.scss
+++ b/ecommerce-react-project/src/components/sign-in/sign-in.styles.scss
@@ -1,9 +1,18 @@
 .sign-in {
-  width: 30vw;
+  width: 450px;
   display: flex;
   flex-direction: column;
 
   .title {
     margin: 10px 0;
   }
+
+  .buttons {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+* {
+  box-sizing: border-box;
 }
